// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  aria-labelledby="responsive-dialog-title"
  fullScreen={true}
  fullWidth={true}
  maxWidth="md"
  onBackdropClick={[Function]}
  onEscapeKeyDown={[Function]}
  open={true}
>
  Dialog - 
  <div
    className="MuiDialogTitle-root-1"
    id="responsive-dialog-title"
  >
    <h2
      className="MuiTypography-root-2 MuiTypography-title-8"
    >
      Alterar imagem
    </h2>
  </div>
  <div
    className="MuiDialogContent-root-37"
  >
    <div
      accept="image/*"
      acceptStyle={
        Object {
          "border": "2px solid #049DAC",
        }
      }
      disableClick={false}
      multiple={false}
      onDrop={[Function]}
      rejectStyle={
        Object {
          "border": "2px solid #f44336",
        }
      }
      style={
        Object {
          "border": "1px dashed",
          "cursor": "pointer",
          "display": "flex",
          "height": 400,
          "justifyContent": "center",
          "margin": "0 auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "textAlign": "center",
          "width": 400,
        }
      }
    >
      Dropzone - 
      <h5
        className="MuiTypography-root-2 MuiTypography-h5-18"
        style={
          Object {
            "position": "relative",
            "top": 140,
            "width": 300,
          }
        }
      >
        Arraste uma imagem ou clique para escolher o arquivo.
      </h5>
    </div>
  </div>
  <div
    className="MuiDialogActions-root-38"
  >
    <button
      className="MuiButtonBase-root-66 MuiButton-root-40 MuiButton-text-42 MuiButton-textPrimary-43 MuiButton-flat-45 MuiButton-flatPrimary-46 MuiDialogActions-action-39"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-41"
      >
        Cancelar
      </span>
      <span
        className="MuiTouchRipple-root-69"
      />
    </button>
    <button
      className="MuiButtonBase-root-66 MuiButtonBase-disabled-67 MuiButton-root-40 MuiButton-text-42 MuiButton-textPrimary-43 MuiButton-flat-45 MuiButton-flatPrimary-46 MuiButton-disabled-60 MuiDialogActions-action-39"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-41"
      >
        Salvar
      </span>
    </button>
  </div>
</div>
`;

exports[`with file renders correctly 1`] = `
<div
  aria-labelledby="responsive-dialog-title"
  fullScreen={true}
  fullWidth={true}
  maxWidth="md"
  onBackdropClick={[Function]}
  onEscapeKeyDown={[Function]}
  open={true}
>
  Dialog - 
  <div
    className="MuiDialogTitle-root-1"
    id="responsive-dialog-title"
  >
    <h2
      className="MuiTypography-root-2 MuiTypography-title-8"
    >
      Alterar imagem
    </h2>
  </div>
  <div
    className="MuiDialogContent-root-37"
  >
    <div
      accept="image/*"
      acceptStyle={
        Object {
          "border": "2px solid #049DAC",
        }
      }
      disableClick={true}
      multiple={false}
      onDrop={[Function]}
      rejectStyle={
        Object {
          "border": "2px solid #f44336",
        }
      }
      style={
        Object {
          "border": "none",
          "cursor": "move",
          "display": "flex",
          "height": 400,
          "justifyContent": "center",
          "margin": "0 auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "textAlign": "center",
          "width": 400,
        }
      }
    >
      Dropzone - 
      <Avatar
        height={350}
        image={undefined}
        onPositionChange={[Function]}
        position={
          Object {
            "x": 0.5,
            "y": 0.5,
          }
        }
        scale={1}
        width={350}
      />
    </div>
    <div
      style={
        Object {
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      <button
        className="MuiButtonBase-root-66 MuiIconButton-root-76"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-81"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-82"
            color={undefined}
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14zM7 9h5v1H7z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-69"
        />
      </button>
      <button
        className="MuiButtonBase-root-66 MuiIconButton-root-76"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-81"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-82"
            color={undefined}
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M12 10h-2v2H9v-2H7V9h2V7h1v2h2v1z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-69"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiDialogActions-root-38"
  >
    <button
      className="MuiButtonBase-root-66 MuiButton-root-40 MuiButton-text-42 MuiButton-textPrimary-43 MuiButton-flat-45 MuiButton-flatPrimary-46 MuiDialogActions-action-39"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-41"
      >
        Cancelar
      </span>
      <span
        className="MuiTouchRipple-root-69"
      />
    </button>
    <button
      className="MuiButtonBase-root-66 MuiButton-root-40 MuiButton-text-42 MuiButton-textPrimary-43 MuiButton-flat-45 MuiButton-flatPrimary-46 MuiDialogActions-action-39"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-41"
      >
        Salvar
      </span>
      <span
        className="MuiTouchRipple-root-69"
      />
    </button>
  </div>
</div>
`;
